<resources>
    <string name="app_name">Intercept</string>
    <string name="init">Initializing database</string>
    <string name="reset">Reset the Do Not Disturb mode</string>
    <string name="app_setting_name">Intercept Setting</string>
    <string name="app_title">Intercept</string>
    <string name="app_block_name">Black List</string>
    <string name="app_blocksms_name">Messages</string>
    <string name="app_blockcall_name">Calls</string>
    <string name="app_blockrule_name">Intercept Rules</string>
    <string name="app_addblock_name">Add to blacklist</string>
    <string name="app_addwhite_name">Add to whitelist</string>
    <string name="app_editblock_name">Edit</string>
    <string name="app_msg_content_name">Message detail</string>
    <string name="app_blocktime_name">Timeframe</string>
    <string name="intercept_mode_title">Enable Intercepter</string>
    <string name="intercept_mode_summary">Reject phone calls and filter messages at specified time as per the rules you set</string>
    <string name="intercept_rule">Intercept rules</string>
    <string name="intercept_time">Timeframe</string>
    <string name="intercept_notification">Notifications</string>
    <string name="intercept_interruptPhone">Intercept harassing phone calls</string>
    <string name="intercept_interruptPhone_summary">Intercept with a strange rang the bell of the number</string>
    <string name="intercept_time_allday">The whole day</string>
    <string name="intercept_time_settingtime">Custome timeframe</string>
    <string name="intercept_time_startTime">Start</string>
    <string name="intercept_time_endTime">End</string>
    <string name="intercept_blacksmart">Smart blocker</string>
    <string name="intercept_blackname">Blacklist</string>
    <string name="intercept_only_accept_whitelist">only aceept whitelist</string>
    <string name="intercept_nocontacts">Non-contacts</string>
    <string name="intercept_no">Non-contacts</string>
    <string name="intercept_allcall">All numbers</string>
    <string name="intercept_blacksmart_summary">Smartly reject calls and filter messages</string>
    <string name="intercept_blackname_summary">Reject calls and messages num in blacklist</string>
    <string name="intercept_whitelist_summary">Reject calls and messages num out of whitelist</string>
    <string name="intercept_nocontacts_summary">Reject calls and messages from non-contacts</string>
    <string name="intercept_allcall_summary">Reject all calls and messages</string>
    <string name="intercept_blockcall">Intercept calls</string>
    <string name="intercept_blockmsg">Intercept messages</string>
    <string name="intercept_block_msgAndcall">Intercept calls and messages</string>
    <string name="intercept_btn_confirm">OK</string>
    <string name="intercept_btn_cancel">Cancel</string>
    <string name="intercept_clear_menu_block_title">Clear blocklist</string>
    <string name="intercept_clear_menu_msg_title">Clear rejected messages</string>
    <string name="intercept_clear_menu_call_title">Clear rejected calls</string>
    <string name="intercept_adddialog_title">Add to blocklist</string>
    <string name="intercept_cleardialog_title">Clear</string>
    <string name="intercept_cleardialog">Clearing the %s</string>
    <string name="intercept_cleardialog_block_content">blacklist</string>
    <string name="intercept_cleardialog_msg_content">rejected messages</string>
    <string name="intercept_cleardialog_call_content">rejected calls</string>
    <string name="intercept_optionMenu">Clear %s</string>
    <string name="intercept_blockcalllist_emp">No intercept call record</string>
    <string name="intercept_blockmsglist_emp">No intercept message record</string>
    <string name="intercept_blocknamelist_emp">Add untrusted number</string>
    <string name="intercept_white_namelist_emp"> Add trusted number</string>
    <string name="block_num_out_of_all">Intercept than the number of contacts</string>
    <string name="block_num_out_of_all_0">Intercept than the number of contacts and white list</string>
    <string name="block_setting_start_time">07:00</string>
    <string name="block_setting_end_time">23:00</string>
    <string name="intercept_setting_falied">Setting falied, please setting again</string>
    <string name="intercept_delete_blockname">Delete block person</string>
    <string name="intercept_delete_msg">Delete massage</string>
    <string name="intercept_delete_call">Delete phone call</string>
    <string name="intercept_service_started">The intercept service is running.</string>
    <string name="intercept_service_label">Intercept Service</string>
    <string name="intercept_call">Intercepted call</string>
    <string name="intercept_msg">Intercepted Message</string>
    <string name="intercept_notification_text">Intercepted</string>
    <string name="intercept_unread_msg">Message</string>
    <string name="intercept_unseen_call">Call</string>
    <string name="modify_note">Modify note</string>
    <string name="msg_recovery_add">Add to white list</string>
    <string name="msg_recovery_add_black">Add to black list</string>
    <string name="msg_recovery_delete">Delete</string>
    <string name="msg_recovery_add_toast">Add to white list will stop incoming call and text message being intercepted, do you want to add number %s to white list?</string>
    <string name="msg_recovery_delete_toast">The number %s is already in black list, do you want remove it from black list?</string>
    <string name="msg_send_recovery_title">Restore</string>
    <string name="msg_send_recovery_toast">Restore the text message of number %s ?</string>
    <string name="dialog_item_byhand">Add manually</string>
    <string name="dialog_item_from">Add from contact and phone call record</string>
    <string name="app_sms_name">Message</string>
    <string name="app_call_name">Call log</string>
    <string name="app_contact_name">Contact</string>
    <string name="app_import_black_name">Add to black list</string>
    <string name="app_import_white_name">Add to white list</string>
    <string name="app_intercept_msg_delete_context">Will delete the whole conversation</string>
    <string name="app_intercept_msg_single_delete_context">Will delete the conversation</string>
    <string name="app_intercept_call_delete_context">Will delete the whole call record</string>
    <string name="app_intercept_delete_title">Delete</string>
    <string name="intercept_call_data">Intercepted:call %s</string>
    <string name="intercept_msg_data">message %s</string>
    <string name="addwhite_inwhite">The number %s already in white list, do you want restore all the from this number?</string>
    <string name="addwhite_inblack">The number %s is already in black list, do you want delete the duplicate number in black list?</string>
    <string name="addwhite_ok">The number %s already add to white list, do you want restore all the text message from this number? </string>
    <string name="addwhite_already_ok">The number %s already in white list, do you want restore all the from this number?</string>
    <string name="unknown">unknown</string>
    <string name="intercept_recovery_about">Also restore the related data</string>
    <string name="dialog_item_add2whitelist_also">Also add to white list</string>
    <string name="twelve_hour_time_format">ah:mm</string>
    <string name="blocknumber">Phone number</string>
    <string name="blockname">Note</string>
    <string name="blockmode">blockmode</string>
    <string name="edit_block">editblock</string>
    <string name="setting_time_dialog_warning">start time can not bigger than end time or the same</string>
    <string name="hasblockwarning">can not add the same block number</string>
    <string name="haswhitewarning">can not add the same white number</string>
    <string name="mode_prompt">Block mode</string>
    <string name="mode_check">block mode at least one</string>
    <string name="unknowPhoneNum">unknowPhoneNum</string>
    <string name="addBlockSuccessed">Adding block man successed</string>
    <string name="addBlockFailed">Adding block man failed</string>
    <string name="noBlackName">please input black number</string>
    <string name="noWhiteName">please input white number</string>
    <string name="delBlockSuccessed">Deleting block man successed</string>
    <string name="delBlockFailed">Deleting block man failed</string>
    <string name="globalPhoneNumber_tip">Please do not enter an illegal character</string>
    <string name="intercept_ringonce">RingOnce</string>
    <string name="app_white_name">White List</string>
    <string name="clear_menu_white_title">Clear white name</string>
    <string name="white_adddialog_title">Add white name</string>
    <string name="white_number">White number</string>
    <string name="white_name">White name</string>
    <string name="input_white_name">Please input white name</string>
    <string name="input_white_number">Please input white number</string>
    <string name="white_btn_save">Save</string>
    <string name="white_btn_cancel">Cancel</string>
    <string name="guide_sms">Guide the SMS of the constants</string>
    <string name="add_name_by_hand">Add name by hand</string>
    <string name="add_name_from_calls">Add name from calls</string>
    <string name="add_name_from_constants">Add name from constants</string>
    <string name="dialog_item_send_message">Send message</string>
    <string name="dialog_item_send_call">Call</string>
    <string name="dialog_item_modify_remarks">Edit</string>
    <string name="dialog_item_del_from_whitelist">Delete from white list</string>
    <string name="dialog_item_del_from_blacklist">Delete from black list</string>
    <string name="dialog_item_send_to_whitelist">Move to white list</string>
    <string name="dialog_item_send_to_blacklist">Move to black list</string>
    <string name="dialog_item_add2whitelist">Add to white list</string>
    <string name="dialog_item_delete_msg">Delete</string>
    <string name="dialog_item_recover2conversation">Back to conversation</string>
    <string name="dialog_item_recover2callconversation">Back to conversation</string>
    <string name="dialog_item_delete_call">Delete</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_del_blacklist">Clear blacklist</string>
    <string name="menu_add_black">Add black name</string>
    <string name="menu_del_whitelist">Clear whitelist</string>
    <string name="menu_add_white">Add white name</string>
    <string name="menu_del_msglist">Clear intercepted messages</string>
    <string name="menu_del_calllist">Clear intercepted calls</string>
    <string name="addWhiteSuccessed">Adding white man successed</string>
    <string name="addWhiteFailed">Adding white man failed</string>
    <string name="add2black_already_in_white">The rule has been in the white list, add delete list corresponding rule. Do you want to continue?</string>
    <string name="add2white_already_in_black">The rule has been in the black list, add delete list corresponding rule. Do you want to continue?</string>
    <string name="delete_selected_item">Delete the selected number ?</string>
    <string name="dialog_tip">Tips</string>
    <string name="update_title">Update sms check</string>
    <string name="update_message">The current Smart intercept library is too old,Click OK to update</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="noneedToUpdate">Intelligent intercept library has the latest，no need to update</string>
    <string name="updating">Being updated intelligence intercept library</string>
    <string name="updateSuccess">Update Successfully</string>
    <string name="checking">Checking for updates</string>
    <string name="networkError">NetWork Error，Please check network setting</string>
    <string name="menu_update_intelligence_intercept_library">Update</string>
</resources>