<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="interceptTime"
    android:orderingFromXml="true"
    android:title="@string/app_blocktime_name" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="isSwitch"
        android:title="@string/intercept_time_allday" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="timeSetting"
        android:title="@string/intercept_time_settingtime" />

    <Preference
        android:dependency="timeSetting"
        android:key="startTime"
        android:summary="@string/block_setting_start_time"
        android:title="@string/intercept_time_startTime" />
    <Preference
        android:dependency="timeSetting"
        android:key="endTime"
        android:summary="@string/block_setting_end_time"
        android:title="@string/intercept_time_endTime" />

</PreferenceScreen>