<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <ScrollView 
         android:paddingTop="11dip"
         android:id="@+id/ScrollView" android:layout_width="fill_parent"  
         android:layout_height="wrap_content" android:scrollbars="vertical">  
    <RadioGroup
        android:id="@+id/intercept_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:background="@android:drawable/preference_first_item">
            

            <RelativeLayout
                android:id="@+id/blocking_black_smart_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/blocking_black_smart_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:text="@string/intercept_blacksmart"
                    android:textColor="@android:color/preference_primary_text_light"
                    android:textSize="@android:dimen/preference_title_size" />

                <TextView
                    android:id="@+id/blocking_black_smart_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/blocking_black_smart_txt"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:paddingTop="3dip"
                    android:singleLine="true"
                    android:text="@string/intercept_blacksmart_summary"
                    android:textColor="@android:color/preference_secondary_text_light"
                    android:textSize="@android:dimen/preference_summary_size" />
            </RelativeLayout>

            <RadioButton
                android:id="@+id/blocking_black_smart_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center_vertical" 
             android:background="@android:drawable/preference_item">
            <RelativeLayout
                android:id="@+id/blocking_blacklist_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/blocking_blacklist_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:text="@string/intercept_blackname"
                    android:textColor="@android:color/preference_primary_text_light"
                    android:textSize="@android:dimen/preference_title_size" />

                <TextView
                    android:id="@+id/blocking_blacklist_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/blocking_blacklist_txt"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:paddingTop="3dip"
                    android:singleLine="true"
                    android:text="@string/intercept_blackname_summary"
                    android:textColor="@android:color/preference_secondary_text_light"
                    android:textSize="@android:dimen/preference_summary_size" />
            </RelativeLayout>

            <RadioButton
                android:id="@+id/blocking_blacklist_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="true" />
        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center_vertical" 
            android:background="@android:drawable/preference_item">
            <RelativeLayout
                android:id="@+id/only_accept_whitelist_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 >

                <TextView
                    android:id="@+id/only_accept_whitelist_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:text="@string/intercept_only_accept_whitelist"
                    android:textColor="@android:color/preference_primary_text_light"
                    android:textSize="@android:dimen/preference_title_size" />

                <TextView
                    android:id="@+id/blocking_whitelist_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/only_accept_whitelist_txt"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:paddingTop="3dip"
                    android:singleLine="true"
                    android:text="@string/intercept_whitelist_summary"
                    android:textColor="@android:color/preference_secondary_text_light"
                    android:textSize="@android:dimen/preference_summary_size" />
            </RelativeLayout>

            <RadioButton
                android:id="@+id/only_accept_whitelist_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:background="@android:drawable/preference_item">

            <RelativeLayout
                android:id="@+id/blocking_num_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 >

                <TextView
                    android:id="@+id/blocking_num_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:text="@string/intercept_no"
                    android:textColor="@android:color/preference_primary_text_light"
                    android:textSize="@android:dimen/preference_title_size" />

                <TextView
                    android:id="@+id/blocking_num_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/blocking_num_txt"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:paddingTop="3dip"
                    android:singleLine="true"
                    android:text="@string/block_num_out_of_all"
                    android:textColor="@android:color/preference_secondary_text_light"
                    android:textSize="@android:dimen/preference_summary_size" />
            </RelativeLayout>

            <RadioButton
                android:id="@+id/blocking_num_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:background="@android:drawable/preference_last_item">

            <RelativeLayout
                android:id="@+id/blocking_all_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 >

                <TextView
                    android:id="@+id/blocking_all_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:singleLine="true"
                    android:text="@string/intercept_allcall"
                    android:textColor="@android:color/preference_primary_text_light"
                    android:textSize="@android:dimen/preference_title_size" />

                <TextView
                    android:id="@+id/blocking_all_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/blocking_all_txt"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:paddingTop="3dip"
                    android:singleLine="true"
                    android:text="@string/intercept_allcall_summary"
                    android:textColor="@android:color/preference_secondary_text_light"
                    android:textSize="@android:dimen/preference_summary_size" />
            </RelativeLayout>

            <RadioButton
                android:id="@+id/blocking_all_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </RadioGroup>
</ScrollView>
</LinearLayout>