<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dip"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="5dip"
    android:paddingRight="5dip" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >


        <ImageView
            android:id="@+id/intercept_view"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginBottom="19dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="19dip"
            android:src="@drawable/icon_intercept"
            android:scaleType="fitCenter"
            android:background="@android:drawable/notification_app_bg"
            />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intercept_notification_text"
            android:layout_marginTop="10dip"
            android:layout_toRightOf="@id/intercept_view"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:textSize="15sp"
            android:singleLine="true"
            android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent.Title"
            android:textColor="#000000"
            />



            
      
           <RelativeLayout
            android:id="@+id/block_call_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="2dip"
            android:layout_toRightOf="@id/intercept_view"
            >
            <TextView
                android:id="@+id/block_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intercept_unread_msg"
                android:layout_centerVertical="true"
                android:textColor="#515151"
                />

            <ImageView
                android:id="@+id/block_msg_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:paddingLeft="3dip"
                android:paddingRight="3dip"
                android:layout_toRightOf="@id/block_msg" />

            <TextView
                android:id="@+id/block_msg_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="#515151"
                android:layout_toRightOf="@id/block_msg_icon"
                 />

            <TextView
                android:id="@+id/block_call"
                android:paddingLeft="32dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#515151"
                android:text="@string/intercept_unseen_call"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/block_msg_count"
                 />

            <ImageView
                android:id="@+id/block_call_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:paddingLeft="3dip"
                android:paddingRight="3dip"
                android:layout_toRightOf="@id/block_call" />
            
            <TextView
                android:id="@+id/block_call_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#515151"
                android:layout_toRightOf="@id/block_call_icon"
                android:layout_centerVertical="true"
                 />
        </RelativeLayout>
        
    </RelativeLayout>

</LinearLayout>